--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,14 @@ body {
 	color: #333333;
 }
 
+h2, h3 {
+	margin-top: 0px;
+}
+
 h3 {
 	font-size: 24px;
 	color: #91b64f;
 	font-weight:100;
-	margin-top: 0px;
 }
 
 .subtitle {
@@ -43,7 +46,7 @@ a, a:visited {
 	color:#666666; 
 	text-decoration: none;
 }
-
+  
 .green_text { color: #91b64f; }
 .red_text { color:#993300; }
 
@@ -96,6 +99,7 @@ a, a:visited {
 	width: 100%;
 	padding: 0px;
 	border-spacing: 0px;
+	border-collapse:collapse;
 }
 .datatable th, .datatable td{
 	text-align: left;
@@ -103,8 +107,18 @@ a, a:visited {
 }
 
 td { padding: 2px; }
+
 .datatable td {
 	border-bottom: 1px dashed #CCCCCC;
+}
+
+.thead {
+	background-color:#92D050;
+	font-weight: bold;
+	font-size: 12px;
+	border-bottom: dashed 1px #666666;
+	text-align: left;
+	padding: 4px;
 }
 
 /*td {
@@ -118,6 +132,22 @@ td { padding: 2px; }
 	background-color:#F7FAFD;
 }
 
+.unapproved {
+	background-color:#F9D0D0;
+}
+
+.greenbackground {
+	background-color: #D6EAAC;
+}
+
+.yellowbackground {
+	background-color:#FBF28E;
+}
+
+.altrow2 {
+	background-color:#F2FAED;
+}
+
 .menuContainer {
 	padding: 20px 0px 20px 5px;
 	color: #acacac;
@@ -125,26 +155,36 @@ td { padding: 2px; }
 	font-size: 13px;
 }
 
-.menuContainer  ul {
+.menuContainer ul{
 	list-style: none;
 	cursor: pointer;
+	margin-left: 1px;
 }
 
-.menuContainer ul  li {
+#mainmenu a, #mainmenu a:visited {
+	color: #acacac;
+}
+
+.menuContainer ul li {
 	/* padding: 10px; */
 	padding-bottom: 10px;
-	border-bottom: 1px solid #E8E8E8;	
+	border-bottom: 1px solid #E8E8E8;
 }
 
 .menuContainer ul li span {
 	padding-left: 10px;
 	padding-top: 10px;
 	display: block;
-	width:100%;
+	width:90%;
 }
+
 .mainmenuitem_hover {
 	color: #696969 !important;
 	background-color: #91b64f;
+}
+
+.mainmenuitem_hover a {
+	color: #696969 !important;
 }
 
 .submenuitem_hover {
@@ -158,15 +198,19 @@ td { padding: 2px; }
 
 .footer {
 	text-align: right;
-	vertical-align: top;
+	vertical-align: bottom;
 	color: #acacac;
 	font-size: 11px;
 	padding: 12px;
-	height: 30px;
+	height: 50px;
 }
 
 .border_left {
 	border-left: 1px solid #F2F2F2;
+}
+
+.border_right {
+	border-right: 1px solid #F2F2F2;
 }
 
 .searchQuickResults {
@@ -175,6 +219,7 @@ td { padding: 2px; }
 	border: 1px solid #43608B;
 	padding: 10px;
 	position:absolute;
+	z-index: 2;
 	/*left: 2px;
 	top: 25px;
 	z-index: 1;
@@ -187,12 +232,62 @@ td { padding: 2px; }
 	margin: 0px;
 	padding: 5px;
 }
+
 #searchResultsList li {
 	cursor:pointer;
 	border-bottom: 1px solid #E4E4E4;
 }
 #searchResultsList li:hover {
 	border-bottom: 1px solid #AEAEAE;
+}
+
+.notice {
+	background: #FFF6BF;
+	border: 1px solid #FFD324;
+	text-align: center;
+	padding: 5px 20px;
+	font-size: 11px;
+	color:#333333;
+	display:block;
+}
+
+.portalbox, .portalbox_calendar {
+	width: 200px;
+	border: 1px solid #CCCCCC;
+	padding: 0px;
+	margin: 10px;
+	font-size: 11px;
+	color: #333333;
+	min-height: 100px;
+}
+
+.portalbox div, .portalbox_calendar div {
+	padding-top: 3px;
+	padding-right: 5px;
+	padding-bottom: 3px;
+	padding-left: 5px;
+	margin: 0px;
+	vertical-align: middle;
+}
+
+.portalbox_header {
+	font-weight: bold;
+	background: repeat-x top left url(images/bheader.gif) scroll;
+	border-bottom: 1px solid #CCCCCC;
+	height: 1%;
+}
+
+.portalbox_header a, .portalbox_header a:visited {
+	color: #333333;
+}
+
+.portalbox_calendar {
+	background: repeat-x top left url(images/calendar-background.png) scroll #aecd78; 
+	color:#FFFFFF; 
+	font-size:14px;
+	border-top: 0px solid #FFFFFF;
+	text-align:center;
+	padding-top: 8px;
 }
 
 #loginbox, #errorbox {
@@ -255,6 +350,31 @@ input.button {
 	padding: 3px;
 }
 
+#currentmodule_name {
+	font-size:14px;
+	text-align: center;
+	cursor:pointer;
+}
+
+.currentmodule_name_hover {
+	background:url(images/sort_desc.gif) no-repeat 90% 90%;
+}
+
+.moduleslist_container {
+	display: none;
+	text-align: left;
+	width: 150px;
+	margin-left: 40px;
+	left: 40px;
+	position:absolute;
+	border-left: 1px solid #91b64f;
+	border-right: 1px solid #E8E8E8;
+	border-bottom: 1px solid #E8E8E8;
+	padding: 5px;
+	background:#FFF;
+	height:auto;
+}
+
 input[disabled="disabled"], input.disabled, .disabled {
 	background-color:#F9F9F9;
 }
@@ -281,6 +401,63 @@ input[disabled="disabled"], input.disabled, .disabled {
 
 .multipages_current {
 	font-weight: bold;
+}
+
+#profilePicture, .thumbnail {
+	background-color: #FDFAEE;*//*#FEFBE2;*/
+	color:#004F75;
+	border: 1px solid #CCCCCC;/*#F2F2F2;*/ 
+	width: 200px;
+	height:auto; 
+	padding: 6px 6px 20px 6px;
+	margin:2px 3px 2px 3px;
+	clear:both;
+	text-align: center;
+}
+
+.thumbnail {
+	width: 100px;
+	height: 100px;
+}
+/*.editableinline input {
+	margin: 0px !important;
+	padding-bottom: 2px;
+}*/
+
+table.sectionbox {
+	border: 1px solid #CFD5E2;
+	border-spacing: 0px;
+}
+
+table.sectionbox td {
+	padding: 4px;
+}
+
+/*new added class by tony*/
+input, textarea.rounded {   /*each input with class rounded*/
+  border: 1px solid #ccc;
+-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+
+}
+input[type='text'].rounded:focus, textarea:focus, select:focus {   /*each input,textarea,selecte with class rounded and on focus event*/
+ border-color: #000 !important; 
+-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+
+}
+
+input[type='text'].invalid, textarea.invalid, select.invalid { 
+	border-color: red;
+}
+input[type='text'].inactive, textarea.inactive, select.inactive, option.inactive { 
+	color: #999;
+	font-style: italic;
+}
+input[type='text'].required, textarea.required { 
+	background: url(required-input.png) right 5px no-repeat;
 }
 
 /*.editableinline input {
