--- a/css/rml.css
+++ b/css/rml.css
@@ -6,17 +6,18 @@
  * Created:		@alain.paulikevitch		October 3, 2012 10:32 AM
  * Last Update: @zaher.reda 			October 8, 2012 9:52 AM
  */
+@charset "utf-8";
 #rml_maindiv { 
 	position:relative;
 	vertical-align: middle;
 	text-align: left;
 	padding:5px;
-	width: 80%;
+	width: 90%;
 	margin-bottom: 15px;
 }
 
 .rmlinactive, .rmlactive {
-	width: 40px;
+	width: 32px;
 	height: 15px;
 	display:inline-block;
 	margin-right: 2px;
