--- a/css/supplierprofile.css
+++ b/css/supplierprofile.css
@@ -27,9 +27,13 @@
 .content {
 	vertical-align: top;
 	display: inline-block;
-	width: 40%;
+	width: 45%;
 	padding: 5px;
 	background-color:#F7FAFD;
-	margin-right: 10px;
-}
 
+	
+}
+.content > div {
+	width: 40%;
+	
+}
