ability to skip some secti ability to skip some sections new output added.
1-now the add new communication and update previous communication were merged in one dynamic  template.
2- view contact history : completed output for  the product development process phases

--- a/css/sourcing_supplierprofile.css
+++ b/css/sourcing_supplierprofile.css
@@ -39,6 +39,7 @@
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
 	border: thin solid #CCC;
+        cursor:pointer;
 }
 
 .ch_entryheader{
