--- a/css/sourcing_supplierprofile.css
+++ b/css/sourcing_supplierprofile.css
@@ -1,61 +1,79 @@
 @charset "utf-8";
 .main {
-  width: 99%;
-  border-bottom: thin solid #CCC;
-  padding: 2px 2px 2px 3px; 
+    width: 99%;
+    border-bottom: thin solid #CCC;
+    padding: 2px 2px 2px 3px; 
 }
 
 .title {
-	width: 100%;
-	margin-top:10px;
-	/*padding-left:20px;*/
-	font-weight:500;
+    width: 100%;
+    margin-top:10px;
+    /*padding-left:20px;*/
+    font-weight:500;
 }
 
 .question {
-	width: 100%;
-	background-color: #F2FAED;
-	text-align: right;
-	padding: 10px;
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box; 
- }
+    width: 100%;
+    background-color: #F2FAED;
+    text-align: right;
+    padding: 10px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box; 
+}
 
 .content {
-	vertical-align: top;
-	display: inline-block;
-	width: 45%;
-	padding: 5px;	
+    vertical-align: top;
+    display: inline-block;
+    width: 45%;
+    padding: 5px;	
 }
 
 .content > div {
-	width: 46%;
+    width: 46%;
 }
 
 .ch_entryrow {
-	width: 100%; 
-	border-radius: 5px; 
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px; 
-	border: thin solid #CCC;
-        cursor:pointer;
+    width: 100%; 
+    border-radius: 5px; 
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px; 
+    border: thin solid #CCC;
+    cursor:pointer;
 }
 
-.ch_entryheader{
-	padding:5px; 
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */	
-	box-sizing: border-box; 
+.ch_entryheader,.ch_communicationsection{
+    padding:5px; 
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */	
+    box-sizing: border-box; 
 }
 
 .ch_entryheader:hover {
-	background-color: #F2FAED;
+    background-color: #F2FAED;
 }
 
 .ch_entrycontent {
-	display:none; 
-	padding:5px; 
-	margin-left: 15px; 
-	margin-right:15px;
+    display:none; 
+    padding:5px; 
+    margin-left: 15px; 
+    margin-right:15px;
+}
+.ch_communicationsection{
+
+    border-bottom: thin solid #CCC;
+    margin-bottom: 4px;
+
+}	
+
+.ch_productsection {
+    display:none;
+}
+.ch_communicationsection > p{
+    vertical-align:top;
+    width: 100%;
+    padding: 2px;
+    background-color:#669900;
+    font-weight:bold;
+    border-bottom: 1px solid #F2F2F2;
 }
