Fix to show logo in Quarterly Report

--- a/css/report.css
+++ b/css/report.css
@@ -32,7 +32,7 @@
 }
 
 .logo {
-	background: url(./images/Orkila_logo.jpg) center no-repeat;
+	background: url(../images/Orkila_logo.jpg) center no-repeat;
 	height: 100px;
 	width: 200px;
 }
