get modified files from the Feature Branche

--- a/css/report.css
+++ b/css/report.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	padding: 0px;
 	border-spacing: 0px;
+        font-size: 10px !important;
 }
 
 .reportbox {
@@ -13,10 +14,39 @@
 	border-top: 1px solid #4F6228;
 }
 
+.border_bottom_thick {
+    border-bottom: 2px solid #D8D8D8 !important;
+}
+
+.mainbox_datacell, .mainbox_typenamecell {
+     border-left: 1px solid #D8D8D8 !important; 
+      border-bottom: 1px dotted #D8D8D8;
+}
+
+.mainbox_itemnamecell {
+       border-left: 0px; 
+}
+
+.totalsbox_numcell, .totalsbox_perccell {
+    width: 50px;
+    text-align: center;
+}
+
+.totalsbox_perccell {
+    font-style: italic;
+    background-color:#F2FAED;
+}
+
+.totalsbox_yearsep {
+    width: 10px;
+    text-align: center;
+    background-color:#F2FAED;
+}
+
 .thead {
 	background-color:#92D050;
 	font-weight: bold;
-	font-size: 12px;
+	font-size: 11px;
 	border-bottom: dashed 1px #4F6228;
 	text-align: left;
 	width: 100%;
@@ -25,7 +55,7 @@
 .cathead {
 	background-color:#538022;
 	color: #FFFFFF;
-	font-size: 14px !important;
+	font-size: 13px !important;
 	font-weight: bold;
 	text-align:left;
 	width: 100%;
@@ -38,7 +68,7 @@
 }
 
 .totalcell, .datacell {
-	width: 50px;
+	width: 60px;
 	text-align: right;
 }
 
@@ -54,17 +84,12 @@
 	border-bottom: 1px dashed #BFBFBF;
 }
 
-.lightdatacell_freewidth {
-	background-color: #F0F9E8;
-	border-bottom: 1px dashed #BFBFBF;
-}
-
 .namescell {
 	width: 100px;
 	text-align: left;
 }
 
-.datacell, .datacell_freewidth, .lightdatacell_freewidth {
+.datacell, .datacell_freewidth {
 	border-left: 1px solid #BFBFBF;
 	border-right: 1px solid #D8D8D8;
 	text-align: right;
@@ -74,17 +99,18 @@
 	font-weight: bold;
 	border-bottom:1px dashed #BFBFBF;
 	text-align: center;
-	font-size: 12px;
+
 }
 
 .columnsubhead {
-	font-style:italic;
+	font-style: italic;
 	text-align: center;
-	font-size: 10px;
+	font-size: 11px;
+        width: 60px;
 }
 
 .verticalspacer, .horizontalspacer {
-	width: 5px;
+	width: 15px;
 }
 
 .highlight_textbox {
