Several fixed and changes in new preview
1. Corrected contributors section
2. Corrected market reports authors overview
3. Fix things in market report author line
4. Fixed issue with incremental templates accross multiple reports
5. Restore markert report header section
6. New approach to fill upcoming quarters
7. Auti zero fill for unintialized values

--- a/css/report.css
+++ b/css/report.css
@@ -24,7 +24,8 @@
 }
 
 .mainbox_itemnamecell {
-       border-left: 0px; 
+       border-left: 0px;
+       width:  100px;
 }
 
 .totalsbox_numcell, .totalsbox_perccell {
@@ -34,11 +35,13 @@
 
 .totalsbox_perccell {
     font-style: italic;
+    background-color:#F2FAED;
 }
 
 .totalsbox_yearsep {
     width: 10px;
     text-align: center;
+    background-color:#F2FAED;
 }
 
 .thead {
