Important changes to new layout
1. Tables now have dynamic titles
2. Percentage of progression has respective color background
4. Fixed missing by affiliates tables
5. Change index of customer name in filling process
6.  Optimizations in preview.php
7. Fixed missing supplier contact persons

--- a/css/report.css
+++ b/css/report.css
@@ -28,20 +28,29 @@
        width:  100px;
 }
 
-.totalsbox_numcell, .totalsbox_perccell {
+.totalsbox_numcell, .totalsbox_perccellpositive, .totalsbox_perccellnegative, .totalsbox_perccellzero {
     width: 50px;
     text-align: center;
 }
 
-.totalsbox_perccell {
+.totalsbox_perccellpositive {
     font-style: italic;
-    background-color:#F2FAED;
+    background-color:#B0DE78;
+}
+
+.totalsbox_perccellnegative {
+    font-style: italic;
+    background-color:#F78B83;
+}
+
+.totalsbox_perccellzero {
+    font-style: italic;
+    background-color:#F0DE7D;   
 }
 
 .totalsbox_yearsep {
     width: 10px;
     text-align: center;
-    background-color:#F2FAED;
 }
 
 .thead {
