Major changes/fixes to new qr layout
1. Main boxes now have totals
2. Rearranged cover page to better alignment, still needs further work
3. PDF sizes are okay

--- a/css/report.css
+++ b/css/report.css
@@ -5,6 +5,7 @@
 	padding: 0px;
 	border-spacing: 0px;
         font-size: 10px !important;
+        border-width: 0px;
 }
 
 .reportbox {
@@ -18,42 +19,47 @@
     border-bottom: 2px solid #D8D8D8 !important;
 }
 
-.mainbox_datacell, .mainbox_typenamecell {
+.mainbox_datacell, .mainbox_typenamecell, .mainbox_totalcell {
      border-left: 1px solid #D8D8D8 !important; 
-      border-bottom: 1px dotted #D8D8D8;
+     border-bottom: 1px dotted #D8D8D8;
 }
 
-.mainbox_datacell {
+.mainbox_datacell, .mainbox_totalcell {
     text-align: right;
+}
+
+.mainbox_totalcell {
+    text-align: right;
+    font-weight: bold;
 }
 
 .mainbox_itemnamecell {
        border-left: 0px;
-       width:  100px;
+       width: 100px;
 }
 
 .totalsbox_numcell, .totalsbox_perccellpositive, .totalsbox_perccellnegative, .totalsbox_perccellzero {
-    width: 50px;
+    width: 110px !important;
     text-align: center;
 }
 
 .totalsbox_perccellpositive {
     font-style: italic;
-    background-color:#B0DE78;
+    background-color:#D3EFB2;
 }
 
 .totalsbox_perccellnegative {
     font-style: italic;
-    background-color:#F78B83;
+    background-color:#FDBFBA;
 }
 
 .totalsbox_perccellzero {
     font-style: italic;
-    background-color:#F0DE7D;   
+    background-color:#FCF1B8;   
 }
 
 .totalsbox_yearsep {
-    width: 10px;
+    width: 10px !important;
     text-align: center;
 }
 
@@ -76,7 +82,7 @@
 }
 
 .logo {
-	background: url(../images/Orkila_logo.jpg) center no-repeat;
+	/*background: url(../images/Orkila_logo.jpg) center no-repeat;*/
 	height: 100px;
 	width: 200px;
 }
