--- a/css/report.css
+++ b/css/report.css
@@ -19,7 +19,7 @@
     border-bottom: 2px solid #D8D8D8 !important;
 }
 
-.mainbox_datacell, .mainbox_typenamecell, .mainbox_totalcell {
+.mainbox_datacell, .mainbox_typenamecell, .mainbox_totalcell, .currenciesbox_datacell {
      border-left: 1px solid #D8D8D8 !important; 
      border-bottom: 1px dotted #D8D8D8;
 }
