--- a/css/report.css
+++ b/css/report.css
@@ -76,7 +76,7 @@
 .thead {
 	background-color:#92D050;
 	font-weight: bold;
-	font-size: 10px;
+	/*font-size: 10px;*/
 	border-bottom: dashed 1px #4F6228;
 	text-align: left;
 	width: 100%;
@@ -85,7 +85,7 @@
 .cathead {
 	background-color:#538022;
 	color: #FFFFFF;
-	font-size: 12px !important;
+	font-size: 10px !important;
 	font-weight: bold;
 	text-align:left;
 	width: 100%;
@@ -146,6 +146,6 @@
 	padding-left: 5px;
 	border: 1px solid #333333;
 	background-color:#DAEFC3;
-	font-size: 16px;
+	/*font-size: 16px;*/
 	color:#444444;
 }
