Modified the yellow color of the QR totalsbox zero progression

--- a/css/report.css
+++ b/css/report.css
@@ -77,7 +77,7 @@
 
 .totalsbox_perccellzero {
     font-style: italic;
-    background-color:#FCF1B8;   
+    background-color:#FEF7D8;
 }
 
 .totalsbox_yearsep {
