--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,43 @@ input[type='text'].inactive, textarea.inactive, select.inactive, option.inactive
     color: #999;
     font-style: italic;
 }
+
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid #666;
+    display: inline-block;
+    width: 3px;
+}
+
+.arrow-down {
+    width: 0; 
+    height: 0; 
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    border-top: 16px solid #666;
+    display: inline-block;
+}
+
+.arrow-right {
+    width: 0; 
+    height: 0; 
+    border-top: 3px solid transparent;
+    border-right: 3px solid transparent;
+    border-left: 3px solid #666;
+    display: inline-block;
+}
+
+.arrow-left {
+    width: 0; 
+    height: 0; 
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent; 
+    border-right: 3px solid #666; 
+    display: inline-block;
+}
 /*input[type='text'].required, textarea.required { 
     background: url(required-input.png) right 5px no-repeat;
 }*/
