Major modifications on the  new quarterly report:
1-Adding  Line Chart Per Sector In Each Report by segments and affiliates.
2- Currency Chart Of The Related Country Vs Usd And Vs Eur.
3-Stacked Bar and Line Charts For Summaries. by segments and affiliates
4-Table of contents:
	4.1 automatically generated table of contents  summarize the contents of the reports by having short link for each section
	4.2- adding  automated smooth scrolling after scrolling to the middle  of the preview .

--- a/css/report.css
+++ b/css/report.css
@@ -161,3 +161,16 @@
 	/*font-size: 16px;*/
 	color:#444444;
 }
+
+
+.scrollup{
+    width:70px;
+    height:45px;
+    opacity:0.6;
+    position:fixed;
+    bottom:50px;
+    right:85px;
+    display:none;
+    text-indent:-9999px;
+    background: url('../images/icons/icon_top.png') no-repeat;
+}
