--- a/css/report.css
+++ b/css/report.css
@@ -166,9 +166,10 @@
     width: 100px;
     text-align: left;
 }
-#tableofcontent > div {
+#tableofcontent div {
     padding: 5px;
     border-bottom: dotted 1px #ccc;
+    width: 100%;
 }
 
 .scrollup {
