--- a/css/report.css
+++ b/css/report.css
@@ -27,9 +27,14 @@
 .mainbox_datacell, .mainbox_totalcell {
     text-align: right;
 }
-
+.mainbox_mergeddatacell, .mainbox_mergedtotalcell {
+    text-align: center;
+    font-stretch: extra-condensed;
+        font-size:10px;
+}
 .mainbox_forecast {
     font-style: italic;
+    text-align: center;
     background-color: #FCF1B8;
     color: #888;
 }
@@ -172,7 +177,7 @@
 }
 
 .scrollup {
-    opacity:0.6;
+    opacity:3.9;
     position:fixed;
     bottom:10px;
     right:85px;
@@ -182,5 +187,6 @@
     height: 0; 
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-bottom: 10px solid #666;
+    border-bottom: 10px solid  #92D050;
 }
+    
