--- a/css/report.css
+++ b/css/report.css
@@ -7,12 +7,20 @@
     font-size: 8px !important;
     border-width: 0px;
 }
+body {
+    counter-reset: page;           /* Set the section counter to 0 */
+}
 
+.paperContainer:before {
+    counter-increment: page;      /* Increment the section counter */
+    content: "Page " counter(page) ""; /* Display the counter */
+}
 .reportbox {
     border-bottom: 1px solid #A5A5A5;
     border-right: 1px solid #4F6228;
     border-left: 1px solid #4F6228;
     border-top: 1px solid #4F6228;
+     vertical-align: top;
 }
 
 .border_bottom_thick {
@@ -20,8 +28,8 @@
 }
 
 .mainbox_datacell, .mainbox_typenamecell, .mainbox_totalcell, .totalbox_totalcell, .currenciesbox_datacell {
-     border-left: 1px solid #D8D8D8 !important; 
-     border-bottom: 1px dotted #D8D8D8;
+    border-left: 1px solid #D8D8D8 !important; 
+    border-bottom: 1px dotted #D8D8D8;
 }
 
 .mainbox_datacell, .mainbox_totalcell {
@@ -30,7 +38,7 @@
 .mainbox_mergeddatacell, .mainbox_mergedtotalcell {
     text-align: center;
     font-stretch: extra-condensed;
-        font-size:10px;
+    font-size:10px;
 }
 .mainbox_forecast {
     font-style: italic;
@@ -51,9 +59,9 @@
     font-weight: bold;
 }
 .mainbox_itemnamecell {
-       border-left: 0px;
-       width: 140px !important;
-       border-bottom: 1px dotted #D8D8D8;
+    border-left: 0px;
+    width: 140px !important;
+    border-bottom: 1px dotted #D8D8D8;
 }
 
 .totalbox_itemnamecell {
@@ -91,80 +99,81 @@
 }
 
 .thead {
-	background-color:#92D050;
-	font-weight: bold;
-	/*font-size: 10px;*/
-	border-bottom: dashed 1px #4F6228;
-	text-align: left;
-	width: 100%;
+    background-color:#92D050;
+    font-weight: bold;
+    /*font-size: 10px;*/
+    border-bottom: dashed 1px #4F6228;
+    text-align: left;
+    width: 100%;
 }
 
 .cathead {
-	background-color:#538022;
-	color: #FFFFFF;
-	font-size: 10px !important;
-	font-weight: bold;
-	text-align:left;
-	width: 100%;
+    background-color:#538022;
+    color: #FFFFFF;
+    font-size: 10px !important;
+    font-weight: bold;
+    text-align:left;
+    width: 100%;
 }
 
 .logo {
-	background: url(./images/Orkila_logo.jpg) center no-repeat;
-	height: 100px;
-	width: 200px;
+    background: url(./images/Orkila_logo.jpg) center no-repeat;
+    height: 100px;
+    width: 200px;
+    margin: auto;
 }
 
 .totalcell, .datacell {
-	width: 60px;
-	text-align: right;
+    width: 60px;
+    text-align: right;
 }
 
 .totalscell {
-	background-color:#FCD5B4;
-	border-bottom: 1px solid #D8D8D8;
-	font-weight: bold;
-	text-align: right;
+    background-color:#FCD5B4;
+    border-bottom: 1px solid #D8D8D8;
+    font-weight: bold;
+    text-align: right;
 }
 
 .namescell, .datacell, .datacell_freewidth {
-	background-color: #DFF1CB;
-	border-bottom: 1px dashed #BFBFBF;
+    background-color: #DFF1CB;
+    border-bottom: 1px dashed #BFBFBF;
 }
 
 .namescell {
-	width: 100px;
-	text-align: left;
+    width: 100px;
+    text-align: left;
 }
 
 .datacell, .datacell_freewidth {
-	border-left: 1px solid #BFBFBF;
-	border-right: 1px solid #D8D8D8;
-	text-align: right;
+    border-left: 1px solid #BFBFBF;
+    border-right: 1px solid #D8D8D8;
+    text-align: right;
 }
 
 .columnhead, .totalsbox_columnhead {
-	font-weight: bold;
-	border-bottom:1px dashed #BFBFBF;
-	text-align: center;
+    font-weight: bold;
+    border-bottom:1px dashed #BFBFBF;
+    text-align: center;
 }
 
 .columnsubhead {
-	font-style: italic;
-	text-align: center;
-	font-size: 10px;
-        width: 28px;
+    font-style: italic;
+    text-align: center;
+    font-size: 10px;
+    width: 28px;
 }
 
 .verticalspacer, .horizontalspacer {
-	width: 15px;
+    width: 15px;
 }
 
 .highlight_textbox {
-	padding-left: 5px;
-	border: 1px solid #333333;
-	background-color:#DAEFC3;
-	/*font-size: 16px;*/
-	color:#444444;
+    padding-left: 5px;
+    border: 1px solid #333333;
+    background-color:#DAEFC3;
+    /*font-size: 16px;*/
+    color:#444444;
 }
 
 #tableofcontent {
@@ -190,4 +199,4 @@
     border-right: 10px solid transparent;
     border-bottom: 10px solid  #92D050;
 }
-    
+
