--- a/styles.css
+++ b/styles.css
@@ -1,480 +1,480 @@
 @charset "utf-8";
 html, body {
-	height:100%;
+    height:100%;
 }
 
 body {
-	padding: 0px;
-	margin: 0px;
-	font-family: Tahoma;
-	font-size: 13px;
-	background-color:#FFFFFF;
-	color: #333333;
+    padding: 0px;
+    margin: 0px;
+    font-family: Tahoma;
+    font-size: 13px;
+    background-color:#FFFFFF;
+    color: #333333;
 }
 
 h2, h3 {
-	margin-top: 0px;
+    margin-top: 0px;
 }
 
 h3 {
-	font-size: 24px;
-	color: #91b64f;
-	font-weight:100;
+    font-size: 24px;
+    color: #91b64f;
+    font-weight:100;
 }
 
 .subtitle {
-	font-weight: bold;
-	color:#669900;
-	border-bottom: 1px solid #F2F2F2;
+    font-weight: bold;
+    color:#669900;
+    border-bottom: 1px solid #F2F2F2;
 }
 
 .smalltext {
-	font-size: 9px;	
+    font-size: 9px;	
 }
 
 hr {
-	background-color: #91b63f;
-	width: 80%;
-	height: 1px;
-	border: 0px;
-	color: #91b64f;
-	margin-top: 10px;
-	margin-bottom: 5px;
+    background-color: #91b63f;
+    width: 80%;
+    height: 1px;
+    border: 0px;
+    color: #91b64f;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 a, a:visited {
-	color:#666666; 
-	text-decoration: none;
+    color:#666666; 
+    text-decoration: none;
 }
-  
+
 .green_text { color: #91b64f; }
 .red_text { color:#993300; }
 
 #welcome_message a, #welcome_message a:visited {
-	text-decoration: none;
-	color: #acacac;
+    text-decoration: none;
+    color: #acacac;
 }
 
 .ocosLogo {
-	height: 100px;
-	vertical-align: top;
-	text-align: center;
-	padding: 0px 0px 0px 2px;
+    height: 100px;
+    vertical-align: top;
+    text-align: center;
+    padding: 0px 0px 0px 2px;
 }
 
 .sideDesign {
-	vertical-align: top;
-	padding: 0px;
-	margin: 0px;
-	width: 49px;
+    vertical-align: top;
+    padding: 0px;
+    margin: 0px;
+    width: 49px;
 }
 
 .topContent {
-	vertical-align: top;
-	color: #acacac;
-	font-size: 11px;
-	text-align: right;
-	padding: 10px;
+    vertical-align: top;
+    color: #acacac;
+    font-size: 11px;
+    text-align: right;
+    padding: 10px;
 }
 
 #welcome_message {
-	text-align: left !important;
-	float: right;
+    text-align: left !important;
+    float: right;
 }
 
 .contentContainer {
-	vertical-align: top;
-	border-left: 1px solid #E8E8E8;
-	border-right: 1px solid #E8E8E8;
-	padding: 10px;
-	font-size: 13px;
+    vertical-align: top;
+    border-left: 1px solid #E8E8E8;
+    border-right: 1px solid #E8E8E8;
+    padding: 10px;
+    font-size: 13px;
 }
 
 .contentContainer table {
-	font-size: 13px;
+    font-size: 13px;
 }
 
 .datatable {
-	border: 0px;
-	width: 100%;
-	padding: 0px;
-	border-spacing: 0px;
-	border-collapse:collapse;
+    border: 0px;
+    width: 100%;
+    padding: 0px;
+    border-spacing: 0px;
+    border-collapse:collapse;
 }
 .datatable th, .datatable td{
-	text-align: left;
-	padding: 5px;
+    text-align: left;
+    padding: 5px;
 }
 
 td { padding: 2px; }
 
 .datatable td {
-	border-bottom: 1px dashed #CCCCCC;
+    border-bottom: 1px dashed #CCCCCC;
 }
 
 .thead {
-	background-color:#92D050;
-	font-weight: bold;
-	font-size: 12px;
-	border-bottom: dashed 1px #666666;
-	text-align: left;
-	padding: 4px;
+    background-color:#92D050;
+    font-weight: bold;
+    font-size: 12px;
+    border-bottom: dashed 1px #666666;
+    text-align: left;
+    padding: 4px;
 }
 
 /*td {
-	padding: 2px;
+        padding: 2px;
 }*/
 
 /*.trow, .altrow {
- 	border-bottom: 1px dashed #CCCCCC;
+        border-bottom: 1px dashed #CCCCCC;
 }*/
 .altrow {
-	background-color:#F7FAFD;
+    background-color:#F7FAFD;
 }
 
 .unapproved {
-	background-color:#F9D0D0;
+    background-color:#F9D0D0;
 }
 
 .greenbackground {
-	background-color: #D6EAAC;
+    background-color: #D6EAAC;
 }
 
 .yellowbackground {
-	background-color:#FBF28E;
+    background-color:#FBF28E;
 }
 
 .altrow2 {
-	background-color:#F2FAED;
+    background-color:#F2FAED;
 }
 
 .menuContainer {
-	padding: 20px 0px 20px 5px;
-	color: #acacac;
-	vertical-align: top;
-	font-size: 13px;
+    padding: 20px 0px 20px 5px;
+    color: #acacac;
+    vertical-align: top;
+    font-size: 13px;
 }
 
 .menuContainer ul{
-	list-style: none;
-	cursor: pointer;
-	margin-left: 1px;
+    list-style: none;
+    cursor: pointer;
+    margin-left: 1px;
 }
 
 #mainmenu a, #mainmenu a:visited {
-	color: #acacac;
+    color: #acacac;
 }
 
 .menuContainer ul li {
-	/* padding: 10px; */
-	padding-bottom: 10px;
-	border-bottom: 1px solid #E8E8E8;
+    /* padding: 10px; */
+    padding-bottom: 10px;
+    border-bottom: 1px solid #E8E8E8;
 }
 
 .menuContainer ul li span {
-	padding-left: 10px;
-	padding-top: 10px;
-	display: block;
-	width:90%;
+    padding-left: 10px;
+    padding-top: 10px;
+    display: block;
+    width:90%;
 }
 
 .mainmenuitem_hover {
-	color: #696969 !important;
-	background-color: #91b64f;
+    color: #696969 !important;
+    background-color: #91b64f;
 }
 
 .mainmenuitem_hover a {
-	color: #696969 !important;
+    color: #696969 !important;
 }
 
 .submenuitem_hover {
-	color: #696969;
-	border-bottom: 1px solid #696969 !important;
+    color: #696969;
+    border-bottom: 1px solid #696969 !important;
 }
 
 .menuContainer ul li div ul {
-	padding: 5px;
+    padding: 5px;
 }
 
 .footer {
-	text-align: right;
-	vertical-align: bottom;
-	color: #acacac;
-	font-size: 11px;
-	padding: 12px;
-	height: 50px;
+    text-align: right;
+    vertical-align: bottom;
+    color: #acacac;
+    font-size: 11px;
+    padding: 12px;
+    height: 50px;
 }
 
 .border_left {
-	border-left: 1px solid #F2F2F2;
+    border-left: 1px solid #F2F2F2;
 }
 
 .border_right {
-	border-right: 1px solid #F2F2F2;
+    border-right: 1px solid #F2F2F2;
 }
 
 .border_bottom {
-	border-bottom: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
 }
 
 .searchQuickResults {
-	width: 200px;
-	background:#F8F8F8;
-	border: 1px solid #43608B;
-	padding: 10px;
-	position:absolute;
-	z-index: 2;
-	/*left: 2px;
-	top: 25px;
-	z-index: 1;
-	margin-top: 25px;
-	margin-left: -207px;*/
+    width: 200px;
+    background:#F8F8F8;
+    border: 1px solid #43608B;
+    padding: 10px;
+    position:absolute;
+    z-index: 2;
+    /*left: 2px;
+    top: 25px;
+    z-index: 1;
+    margin-top: 25px;
+    margin-left: -207px;*/
 }
 
 #searchResultsList {
-	list-style: none;
-	margin: 0px;
-	padding: 5px;
+    list-style: none;
+    margin: 0px;
+    padding: 5px;
 }
 
 #searchResultsList li {
-	cursor:pointer;
-	border-bottom: 1px solid #E4E4E4;
+    cursor:pointer;
+    border-bottom: 1px solid #E4E4E4;
 }
 #searchResultsList li:hover {
-	border-bottom: 1px solid #AEAEAE;
+    border-bottom: 1px solid #AEAEAE;
 }
 
 .notice {
-	background: #FFF6BF;
-	border: 1px solid #FFD324;
-	text-align: center;
-	padding: 5px 20px;
-	font-size: 11px;
-	color:#333333;
-	display:block;
+    background: #FFF6BF;
+    border: 1px solid #FFD324;
+    text-align: center;
+    padding: 5px 20px;
+    font-size: 11px;
+    color:#333333;
+    display:block;
 }
 
 .portalbox, .portalbox_calendar {
-	width: 200px;
-	border: 1px solid #CCCCCC;
-	padding: 0px;
-	margin: 10px;
-	font-size: 11px;
-	color: #333333;
-	min-height: 100px;
+    width: 200px;
+    border: 1px solid #CCCCCC;
+    padding: 0px;
+    margin: 10px;
+    font-size: 11px;
+    color: #333333;
+    min-height: 100px;
 }
 
 .portalbox div, .portalbox_calendar div {
-	padding-top: 3px;
-	padding-right: 5px;
-	padding-bottom: 3px;
-	padding-left: 5px;
-	margin: 0px;
-	vertical-align: middle;
+    padding-top: 3px;
+    padding-right: 5px;
+    padding-bottom: 3px;
+    padding-left: 5px;
+    margin: 0px;
+    vertical-align: middle;
 }
 
 .portalbox_header {
-	font-weight: bold;
-	background: repeat-x top left url(images/bheader.gif) scroll;
-	border-bottom: 1px solid #CCCCCC;
-	height: 1%;
+    font-weight: bold;
+    background: repeat-x top left url(images/bheader.gif) scroll;
+    border-bottom: 1px solid #CCCCCC;
+    height: 1%;
 }
 
 .portalbox_header a, .portalbox_header a:visited {
-	color: #333333;
+    color: #333333;
 }
 
 .portalbox_calendar {
-	background: repeat-x top left url(images/calendar-background.png) scroll #aecd78; 
-	color:#FFFFFF; 
-	font-size:14px;
-	border-top: 0px solid #FFFFFF;
-	text-align:center;
-	padding-top: 8px;
+    background: repeat-x top left url(images/calendar-background.png) scroll #aecd78; 
+    color:#FFFFFF; 
+    font-size:14px;
+    border-top: 0px solid #FFFFFF;
+    text-align:center;
+    padding-top: 8px;
 }
 
 #loginbox, #errorbox {
-	margin: 10px;
-	margin-top: 10%;
-	padding: 0px;
-	/*padding-top: 5px !important;*/
-	clear: both;
-	float: none;
-	height: auto;
-	width: 30%;
-	border-right: 1px solid #CFD5E2;
-	border-left: 1px solid #CFD5E2;
-	border-top: 1px solid #EEEEEE;
-	font-size: 13px;	
+    margin: 10px;
+    margin-top: 10%;
+    padding: 0px;
+    /*padding-top: 5px !important;*/
+    clear: both;
+    float: none;
+    height: auto;
+    width: 30%;
+    border-right: 1px solid #CFD5E2;
+    border-left: 1px solid #CFD5E2;
+    border-top: 1px solid #EEEEEE;
+    font-size: 13px;	
 }
 
 #errorbox .header {
-	background-color:#CC0000;
-	color:#F9F9F9;
-	height: 30px;
-	font-weight: bold;	
+    background-color:#CC0000;
+    color:#F9F9F9;
+    height: 30px;
+    font-weight: bold;	
 }
 
 #errorbox .content {
-	height: 50px;
-	padding: 10px;
-	font-size: 13px;
+    height: 50px;
+    padding: 10px;
+    font-size: 13px;
 }
 
 #loginbox .footer, #errorbox .footer {
-	font-size: 9px;
-	color: #E6ECF2;
-	text-align: right;
-	padding: 5px;
-	background-color: #91b64f;
-	border-top: 1px solid #999999;
-	border-bottom: 1px solid #666666;
+    font-size: 9px;
+    color: #E6ECF2;
+    text-align: right;
+    padding: 5px;
+    background-color: #91b64f;
+    border-top: 1px solid #999999;
+    border-bottom: 1px solid #666666;
 }
 #loginbox .footer a, #errorbox .footer a {
-	color: #E6ECF2;
+    color: #E6ECF2;
 }
 
 #loginbox .footer {
-	height: 50px;
-	vertical-align: bottom !important;
+    height: 50px;
+    vertical-align: bottom !important;
 }
 
 #errorbox .footer {
-	height: 20px;
-	vertical-align: middle !important;
+    height: 20px;
+    vertical-align: middle !important;
 }
 
 input.button {
-	border: 1px solid #CCCCCC; 
-	color:#FFFFFF; 
-	background:#91b64f; 
-	/*width: 60px;*/ 
-	font-weight: bold; 
-	padding: 3px;
+    border: 1px solid #CCCCCC; 
+    color:#FFFFFF; 
+    background:#91b64f; 
+    /*width: 60px;*/ 
+    font-weight: bold; 
+    padding: 3px;
 }
 
 #currentmodule_name {
-	font-size:14px;
-	text-align: center;
-	cursor:pointer;
+    font-size:14px;
+    text-align: center;
+    cursor:pointer;
 }
 
 .currentmodule_name_hover {
-	background:url(images/sort_desc.gif) no-repeat 90% 90%;
+    background:url(images/sort_desc.gif) no-repeat 90% 90%;
 }
 
 .moduleslist_container {
-	display: none;
-	text-align: left;
-	width: 150px;
-	margin-left: 40px;
-	left: 40px;
-	position:absolute;
-	border-left: 1px solid #91b64f;
-	border-right: 1px solid #E8E8E8;
-	border-bottom: 1px solid #E8E8E8;
-	padding: 5px;
-	background:#FFF;
-	height:auto;
+    display: none;
+    text-align: left;
+    width: 150px;
+    margin-left: 40px;
+    left: 40px;
+    position:absolute;
+    border-left: 1px solid #91b64f;
+    border-right: 1px solid #E8E8E8;
+    border-bottom: 1px solid #E8E8E8;
+    padding: 5px;
+    background:#FFF;
+    height:auto;
 }
 
 .moduleslist_container div {
-	margin: 1em 0px;	
+    margin: 1em 0px;	
 }
 
 input[disabled="disabled"], input.disabled, .disabled {
-	background-color:#F9F9F9;
+    background-color:#F9F9F9;
 }
 
 #popupBox {
-	border: 1px solid #87a938;
-	width: 400px;
-	height: auto;
-	background-color: #F0F0F0;
-	position: fixed;
-	float:none;
-	clear: both;
-	display:none;
-  	top:40%;
+    border: 1px solid #87a938;
+    width: 400px;
+    height: auto;
+    background-color: #F0F0F0;
+    position: fixed;
+    float:none;
+    clear: both;
+    display:none;
+    top:40%;
     left:30%;
-	padding: 20px;
+    padding: 20px;
 }
 
 .multipages a, .multipages span  {
-	border: 1px solid #CCCCCC;
-	padding: 2px 6px;
-	background: #F4FAF1;
+    border: 1px solid #CCCCCC;
+    padding: 2px 6px;
+    background: #F4FAF1;
 }
 
 .multipages_current {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 #profilePicture, .thumbnail {
-	background-color: #FDFAEE;/*#FEFBE2;*/
-	color:#004F75;
-	border: 1px solid #CCCCCC;/*#F2F2F2;*/ 
-	width: 200px;
-	height:auto; 
-	padding: 6px 6px 20px 6px;
-	margin:2px 3px 2px 3px;
-	clear:both;
-	text-align: center;
+    background-color: #FDFAEE;/*#FEFBE2;*/
+    color:#004F75;
+    border: 1px solid #CCCCCC;/*#F2F2F2;*/ 
+    width: 200px;
+    height:auto; 
+    padding: 6px 6px 20px 6px;
+    margin:2px 3px 2px 3px;
+    clear:both;
+    text-align: center;
 }
 
 .thumbnail {
-	width: 100px;
-	height: 100px;
+    width: 100px;
+    height: 100px;
 }
 /*.editableinline input {
-	margin: 0px !important;
-	padding-bottom: 2px;
+        margin: 0px !important;
+        padding-bottom: 2px;
 }*/
 
 table.sectionbox {
-	border: 1px solid #CFD5E2;
-	border-spacing: 0px;
+    border: 1px solid #CFD5E2;
+    border-spacing: 0px;
 }
 
 table.sectionbox td {
-	padding: 4px;
+    padding: 4px;
 }
 /* Classes required for the multiple filtering - START */
 .tablefilters_row th, .tablefilters_row td, .tablefilters_row_toggle td {
-	margin: 0px 0px !important;	
-	background-color:#F7FAFD;
-	border-spacing: 0px;
-	vertical-align:top;
+    margin: 0px 0px !important;	
+    background-color:#F7FAFD;
+    border-spacing: 0px;
+    vertical-align:top;
 }
 .tablefilters_row th, .tablefilters_row td {
-	border-top: 1px solid #CCC !important;
+    border-top: 1px solid #CCC !important;
 }
 .tablefilters_row  {
-	-moz-box-shadow:inset 0px 5px 10px #EEF4FB;
-	-webkit-box-shadow:inset 0px 5px 10px #EEF4FB;
-	box-shadow:inset 0px 5px 10px #EEF4FB;
+    -moz-box-shadow:inset 0px 5px 10px #EEF4FB;
+    -webkit-box-shadow:inset 0px 5px 10px #EEF4FB;
+    box-shadow:inset 0px 5px 10px #EEF4FB;
 }
 .tablefilters_row_toggle td {
-	padding: 0px !important;
-	text-align:center !important;
-	height: 2px !important;
-	border-bottom: 1px solid #CCC !important;
-	color: #666;
-	line-height: 6px;
-	cursor: pointer;
+    padding: 0px !important;
+    text-align:center !important;
+    height: 2px !important;
+    border-bottom: 1px solid #CCC !important;
+    color: #666;
+    line-height: 6px;
+    cursor: pointer;
 }
 
 .tablefilters_row_toggle td:hover {
-	background-color:#F2FAED;
-	color: #333;
+    background-color:#F2FAED;
+    color: #333;
 }
 
 tr.dummytrow td, tr.dummytrow th {
-	height:1px !important;
-	padding:0px !important;
-	margin:0px !important;
-	line-height: 1px;
+    height:1px !important;
+    padding:0px !important;
+    margin:0px !important;
+    line-height: 1px;
 }
 
 .arrow-up {
@@ -512,4 +512,50 @@ tr.dummytrow td, tr.dummytrow th {
     border-right: 4px solid #666; 
     display: inline-block;
 }
-/* Classes required for the multiple filtering - START */
+/* Classes required for the users mosaiic view - START */
+
+#mosaicgrid {
+    text-align: left;
+}
+
+#mosaicgrid > div.profileuser {
+    /* Giving equal sizes to each element */
+    width: 100px;
+    height: 96px;
+    /* Positioning elements in lines */
+    display:  inline-block;
+    /* This is necessary for position:absolute to work as desired */
+    position:relative;
+    /* Preventing zoomed images to grow outside their elements */
+    overflow: visible; 
+    z-index:auto;
+}
+
+.profileuser img {
+    /* Stretching the images to fill whole elements */
+    width: 100px;
+    height: 96px;
+    vertical-align: top;
+    /* Preventing blank space below the image */
+    line-height: 0;
+    position:absolute;
+    box-shadow: 1px 1px 4px rgb(204, 204, 204);
+    /* A one-second transition was to disturbing for me */
+    -webkit-transition: all 0.2s ease;
+    -moz-transition:    all 0.2s ease;
+    -o-transition:      all 0.2s ease;
+    -ms-transition:     all 0.2s ease;
+    transition:         all 0.2s easeOut; 
+    z-index:0;
+}
+.profileuser img:hover {
+    /* Making images appear bigger and transparent on mouseover */
+    width:   120%;
+    height:  120%;
+    padding:5px;
+    box-shadow: 2px 2px 4px rgb(204, 204, 204);
+    cursor: -webkit-zoom-in;
+    cursor: -moz-zoom-in;
+    z-index:2;
+
+}
