--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 .smalltext {
-    font-size: 9px;	
+    font-size: 9px;
 }
 
 hr {
@@ -43,7 +43,7 @@ hr {
 }
 
 a, a:visited {
-    color:#666666; 
+    color:#666666;
     text-decoration: none;
 }
 
@@ -286,8 +286,8 @@ td { padding: 2px; }
 }
 
 .portalbox_calendar {
-    background: repeat-x top left url(images/calendar-background.png) scroll #aecd78; 
-    color:#FFFFFF; 
+    background: repeat-x top left url(images/calendar-background.png) scroll #aecd78;
+    color:#FFFFFF;
     font-size:14px;
     border-top: 0px solid #FFFFFF;
     text-align:center;
@@ -306,14 +306,14 @@ td { padding: 2px; }
     border-right: 1px solid #CFD5E2;
     border-left: 1px solid #CFD5E2;
     border-top: 1px solid #EEEEEE;
-    font-size: 13px;	
+    font-size: 13px;
 }
 
 #errorbox .header {
     background-color:#CC0000;
     color:#F9F9F9;
     height: 30px;
-    font-weight: bold;	
+    font-weight: bold;
 }
 
 #errorbox .content {
@@ -346,11 +346,11 @@ td { padding: 2px; }
 }
 
 input.button {
-    border: 1px solid #CCCCCC; 
-    color:#FFFFFF; 
-    background:#91b64f; 
-    /*width: 60px;*/ 
-    font-weight: bold; 
+    border: 1px solid #CCCCCC;
+    color:#FFFFFF;
+    background:#91b64f;
+    /*width: 60px;*/
+    font-weight: bold;
     padding: 3px;
 }
 
@@ -380,7 +380,7 @@ input.button {
 }
 
 .moduleslist_container div {
-    margin: 1em 0px;	
+    margin: 1em 0px;
 }
 
 input[disabled="disabled"], input.disabled, .disabled {
@@ -414,9 +414,9 @@ input[disabled="disabled"], input.disabled, .disabled {
 #profilePicture, .thumbnail {
     background-color: #FDFAEE;/*#FEFBE2;*/
     color:#004F75;
-    border: 1px solid #CCCCCC;/*#F2F2F2;*/ 
+    border: 1px solid #CCCCCC;/*#F2F2F2;*/
     width: 200px;
-    height:auto; 
+    height:auto;
     padding: 6px 6px 20px 6px;
     margin:2px 3px 2px 3px;
     clear:both;
@@ -442,7 +442,7 @@ table.sectionbox td {
 }
 /* Classes required for the multiple filtering - START */
 .tablefilters_row th, .tablefilters_row td, .tablefilters_row_toggle td {
-    margin: 0px 0px !important;	
+    margin: 0px 0px !important;
     background-color:#F7FAFD;
     border-spacing: 0px;
     vertical-align:top;
@@ -478,8 +478,8 @@ tr.dummytrow td, tr.dummytrow th {
 }
 
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
     border-bottom: 4px solid #666;
@@ -487,8 +487,8 @@ tr.dummytrow td, tr.dummytrow th {
 }
 
 .arrow-down {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
     border-top: 4px solid #666;
@@ -496,8 +496,8 @@ tr.dummytrow td, tr.dummytrow th {
 }
 
 .arrow-right {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-top: 4px solid transparent;
     border-right: 4px solid transparent;
     border-left: 4px solid #666;
@@ -505,10 +505,88 @@ tr.dummytrow td, tr.dummytrow th {
 }
 
 .arrow-left {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-top: 4px solid transparent;
-    border-bottom: 4px solid transparent; 
-    border-right: 4px solid #666; 
+    border-bottom: 4px solid transparent;
+    border-right: 4px solid #666;
     display: inline-block;
 }
+
+.timelinebox {
+    margin: 20px 0px 20px 40px;
+    padding-left: 20px;
+
+    height: 100%;
+}
+.timelinedetails {
+    position: relative;
+    display: block;
+    padding-left: 30px;
+    margin-top: 40px; /*dynamic margin*/
+    width:100%;
+    height:100%;
+    border-left: 2px solid #333 ;
+}
+.timelinedetails .timelineitem {
+    display: inline-block;
+    /*    padding:10px;
+        margin: 5px;*/
+    width:20% !important;
+}
+div.previoustimeline {
+    display: none;
+    margin-top: -10px;
+    top: 80%;
+    float:left;
+    left: 0px;
+    width:100%;
+    hieght:100%;
+
+}
+div.previoustimeline  span.previoustimelineyear{
+    display: inline-block;
+    top: 80%;
+    left: -7%;
+    padding: 5px;
+    margin: 5px;
+    width:100px;
+    background-color:yellow;
+    font-size: 5px;
+}
+div.previoustimeline  span.previoustimelinedata {
+    display: inline;   
+    top: 80%;
+    left: -7%;
+    padding: 5px;
+    margin:15px;
+    width:85px;
+
+}
+.timelineitem > span{
+    padding: 40px;
+}
+.timelineitem > div.itemproperties{
+    float:left;
+}
+div.itemproperties span{
+    font-family:  inherit;
+    font-size: 8px;
+    display:inline;
+
+}
+div.timelinedetails .circle {
+    position: absolute;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    display: block;
+    margin-top: -10px;
+    top: 0%;
+    left: 0px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid  #333;
+    cursor: pointer;
+}
+
