--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,9 @@ tr.dummytrow td, tr.dummytrow th {
 }
 
 .timeline_entry_dependent {
+    height: 100%;
+    width: 100%;
+    vertical-align: top;
     border-left: 1px solid #333;
     margin-left: -17px;
     border-color:#333;
@@ -536,7 +539,7 @@ tr.dummytrow td, tr.dummytrow th {
 
 .timeline_entry .timeline_column {
     display: inline-block;
-    width: 15% !important;
+    width: 10% ;
     padding: 10px 0px 0px 30px;
 }
 
@@ -563,6 +566,8 @@ tr.dummytrow td, tr.dummytrow th {
     vertical-align: top;
     border-color:#87a938;
 }
+
+
 
 .timeline_entry .circle:hover {
     border-color:#aecd78; 
