--- a/styles.css
+++ b/styles.css
@@ -567,7 +567,27 @@ tr.dummytrow td, tr.dummytrow th {
     border-color:#87a938;
 }
 
-
+.timeline_entrydepth {
+    margin-left: 45px;
+        padding:5px;
+    border-color:red;
+}
+.timeline_entry .depthcircle {
+    position: absolute;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    display: block;
+    top: 75%;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid  #333;
+    background-color: #FFF;
+    z-index: 10;
+    vertical-align: top;
+    border-color:#87a938;
+}
 
 .timeline_entry .circle:hover {
     border-color:#aecd78; 
