Changed the red text color

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ a, a:visited {
 }
 
 .green_text { color: #91b64f; }
-.red_text { color:#993300; }
+.red_text { color:#CA0703; }
 
 #welcome_message a, #welcome_message a:visited {
     text-decoration: none;
