--- a/css/report.css
+++ b/css/report.css
@@ -110,7 +110,7 @@
 }
 
 .logo {
-    background: url(./images/Orkila_logo.jpg) center no-repeat;
+    background: url(./images/Orkila_logo_2.jpg) center no-repeat;
     height: 100px;
     width: 200px;
     margin: auto;
