--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,7 @@ h2, h3 {
 
 h3 {
     font-size: 24px;
-    color: $green;
+    color: $color_green;
     font-weight:100;
 }
 
@@ -44,7 +44,7 @@ hr {
     width: 80%;
     height: 1px;
     border: 0px;
-    color: $green;
+    color: $color_green;
     margin-top: 10px;
     margin-bottom: 5px;
 }
@@ -54,7 +54,7 @@ a, a:visited {
     text-decoration: none;
 }
 
-.green_text { color: $green; }
+.green_text { color: $color_green; }
 .red_text { color:#CA0703; }
 
 #welcome_message {
@@ -191,7 +191,7 @@ td { padding: 2px; }
 
 .mainmenuitem_hover {
     color: #696969 !important;
-    background-color: $green;
+    background-color: $color_green;
 }
 
 .mainmenuitem_hover a {
@@ -338,7 +338,7 @@ td { padding: 2px; }
     color: #E6ECF2;
     text-align: right;
     padding: 5px;
-    background-color: $green;
+    background-color: $color_green;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #666666;
 }
@@ -359,7 +359,7 @@ td { padding: 2px; }
 input.button {
     border: 1px solid #CCCCCC;
     color:#FFFFFF;
-    background: $green;
+    background: $color_green;
     /*width: 60px;*/
     font-weight: bold;
     padding: 3px;
@@ -382,7 +382,7 @@ input.button {
     margin-left: 40px;
     left: 40px;
     position:absolute;
-    border-left: 1px solid $green;
+    border-left: 1px solid $color_green;
     border-right: 1px solid #E8E8E8;
     border-bottom: 1px solid #E8E8E8;
     padding: 5px;
@@ -611,4 +611,34 @@ tr.dummytrow td, tr.dummytrow th {
 .requiredfield:focus{
     -webkit-box-shadow: 0 1px 2px 2px #FF142C;
     box-shadow: 0 1px 2px 1px #FF142C;
+}
+
+.sortable {
+    list-style-type: none;
+    margin: 10px;
+    float: left;
+    @include border-radius(1px);
+    border: 1px dashed #CCC;
+    background:#fefefe;
+    padding: 5px;
+    width: 50%;
+
+    li {
+        margin:5px;
+        padding: 5px;
+        background: $color_grey;
+        font-size: 13px;
+        width: 70%;
+        text-align: left;
+    }
+
+    li:hover {
+        cursor:move;
+    }
+
+    .ui-state-highlight {
+        background: $color_grey !important;
+        height: 1.2em;
+        line-height: 1.2em;
+    }
 }
